@@ -11,6 +11,9 @@ Version 0.4.0:
 	  on high-latency connections and while running a clipboard manager
 	  locally, the primary selection claiming can make Tilde work slowly.
 
+	Bug fixes:
+	- Default values are now handled properly in the Interface dialog.
+
 Version 0.3.9:
 	Minor updates to Makefile.in for compatibility with Debian packaging.
 
